ELS Code/main/default/objects/Zapier_logs__c/Zapier_logs__c.object-meta.xml
<CustomObject>
    <label>Zapier log</label>
    <nameField>
        <displayFormat>log - {00000}</displayFormat>
        <label>Zapier logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zapier logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>