ELS Code/main/default/objects/Zapier_logs__c/fields/ContactId_Error__c.field-meta.xml
<CustomField>
    <fullName>ContactId_Error__c</fullName>
    <label>ContactId/Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>