ELS Code/main/default/objects/Zapier_logs__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>225</length>
    <type>Text</type>
</CustomField>