ELS Code/main/default/objects/Zapier_logs__c/fields/Province_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Residence__c</fullName>
    <label>Province of Residence</label>
    <length>225</length>
    <type>Text</type>
</CustomField>