ELS Code/main/default/objects/Zapier_logs__c/fields/State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence__c</fullName>
    <label>State of Residence</label>
    <length>225</length>
    <type>Text</type>
</CustomField>