ELS Code/main/default/objects/Zapier_logs__c/fields/What_s_your_Ideal_Getaway__c.field-meta.xml
<CustomField>
    <fullName>What_s_your_Ideal_Getaway__c</fullName>
    <label>What&apos;s your Ideal Getaway?</label>
    <type>TextArea</type>
</CustomField>