ELS Code/main/default/objects/Zapier_logs__c/fields/Where_are_you_Interested_in_Camping__c.field-meta.xml
<CustomField>
    <fullName>Where_are_you_Interested_in_Camping__c</fullName>
    <label>Where are you Interested in Camping?</label>
    <type>TextArea</type>
</CustomField>