ELS Code/main/default/objects/Zapier_logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Source_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>